@@ -1,3 +1,4 @@
+Improved kit-generation algorithm
 Added 3d button to the collection boxes
 Dragged atom/molecule always in front of other atoms/molecules
 Animated blue hint arrow, and added a text bubble
